[package]
name = "usbmux-client-tokio"
version = "0.1.1"
edition = "2021"
description = "A Rust implementation of the usbmux and lockdown protocol used to connect to iOS devices."
authors = ["Andreas Lüdeke <andreas@devicelink.app>"]
license = "MIT"
keywords = ["usbmux", "ios", "lockdown", "proxy", "tokio"]
categories = ["development-tools::debugging", "development-tools::testing"]
repository = "https://github.com/devicelink/usbmux-client-tokio"

[lib]
name = "usbmux_client_tokio"
path = "src/lib.rs"

[[bin]]
name = "idevice"
path = "src/main.rs"

[dependencies]
bytes = "1.6.0"
clap = {version= "4.5.7", features=["derive", "env"]}
flurry = "0.5.1"
futures = "0.3.30"
futures-core = "0.3.30"
plist = { git = "https://github.com/aluedeke/rust-plist.git", branch = "plist_macro" }
pretty-hex = "0.4.1"
rustls = "0.23.8"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.202", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.118"
thiserror = "1.0.61"
tokio = { version="1.37.0", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"

[dev-dependencies]
ctrlc = "3.4.4"
